upload application/protobuf mime-type

--- a/public/javascripts/apps/header/list/templates/headerview.htm
+++ b/public/javascripts/apps/header/list/templates/headerview.htm
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#"><span class="brand"><abbr title="Home">Home</abbr></span></a>
+    <a class="navbar-brand" href="#intro"><span class="brand"><abbr title="Home">Intro</abbr></span></a>
   </div>
   <div class="collapse navbar-collapse navbar-collapse">
     <ul id="menulist" class="nav navbar-nav navbar-right">
