--- a/public/javascripts/apps/intro/show/templates/steambtn.htm
+++ b/public/javascripts/apps/intro/show/templates/steambtn.htm
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-primary">Steam Sign-in!</button>
+<button type="button" class="btn btn-primary" id="steambtn">Steam Sign-in!</button>
